Dodanie swaggera, poprawa działania aplikacji